# prusik

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE  README.md  action.yml  pyproject.toml
.claude/: settings.json  sprint-config.yaml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md
benchmarks/cases/case-001-dev1-fetch-url-route-path/: README.md  brief.md  expected-outcomes.yaml
benchmarks/cases/case-001-dev1-fetch-url-route-path/clean/templates/: _inline_client_form.html
benchmarks/cases/case-001-dev1-fetch-url-route-path/initial-repo/src/: invoices.py
benchmarks/cases/case-001-dev1-fetch-url-route-path/initial-repo/templates/: _inline_client_form.html
benchmarks/cases/case-002-dev1-form-name-dropthrough/: README.md  brief.md  expected-outcomes.yaml
benchmarks/cases/case-002-dev1-form-name-dropthrough/clean/src/: handlers.py
benchmarks/cases/case-003-cross-touch-set-test-reach/: README.md  brief.md  expected-outcomes.yaml
benchmarks/cases/case-004-express-fetch-url-mismatch/: README.md  brief.md  expected-outcomes.yaml
benchmarks/cases/field-ts/: README.md
benchmarks/cases/field-ts/blast-radius-predicted-not-verified/: README.md
examples/: github-pr-comment.yml
examples/greenfield/: README.md
prusik/: __init__.py  __main__.py  _closures.json  absence.py  affected.py  agents_doctor.py  artifact_variants.py  baseline.py  binding_check.py  binding_detect.py  binding_detect_js.py  blast_plan.py  bridge.py  brief_lint.py  calibration.py  capture_diagnose.py  catch_quality.py  changelog.py  ci_comment.py  consistency.py  convergence.py  criterion.py  critic_recall.py  cross_builder.py  detect.py  discovery.py  doctor.py  effort.py  eval.py  evidence.py  feedback.py  feedback_store.py  findings.py  fix_round.py  gate.py  infra_check.py  init.py  injection.py  issues.py  ledger.py  (+36 more)
prusik/detectors/: __init__.py  base.py  binding.py  test_reach.py
prusik/discovery_plugins/: __init__.py  go.py  javascript.py  python.py
prusik/issue_plugins/: __init__.py  github.py  linear.py
prusik/templates/.claude/: settings.json  sprint-config.yaml
prusik/templates/.claude/agents/: backend-builder.md  brief-critic.md  cartographer.md  conventions-enforcer.md  conventions-scribe.md  feature-planner.md  frontend-builder.md  integrator.md  plan-critic.md  pr-composer.md  product-fit-critic.md  regression-sentinel.md  scope-critic.md  scoping.md  test-writer.md
prusik/templates/.claude/artifact-templates/: product-fit.md  product.md
prusik/templates/.claude/commands/: brief-form.md  brief-new.md  issues-sync.md  sprint-advance.md  sprint-complete.md  sprint-pause.md  sprint-resume.md  sprint-run.md  sprint-start.md  sprint-status.md  sprint-triage.md  sprint-watchdog.md
prusik/templates/.claude/schemas/: brief-schema.yaml  plan-schema.yaml  scope-schema.yaml
prusik/templates/.claude/sprint-config-presets/: fastapi-postgres.yaml
prusik/templates/artifacts/: brief.md  plan.md  retro.md  scope.md
prusik/templates/artifacts/briefs/: bug_fix.md  chore.md  config.md  doc.md  migration.md  new_feature.md  refactor.md  test.md
scripts/: boundary_check.py  install-hooks.sh  pre-commit-boundary.sh  regen_closures.py
tests/: _common.py  conftest.py  test_absence.py  test_affected.py  test_artifact_variants.py  test_b26.py  test_baseline.py  test_baseline_clock_caveat.py  test_baseline_evidence.py  test_baseline_worktree.py  test_behavior_verify_scope.py  test_binding.py  test_blast_plan.py  test_blast_recall.py  test_blast_verify.py  test_blocked_criterion.py  test_boundary.py  test_boundary_worktree.py  test_bridge.py  test_bridge_status_reslug.py  test_brief.py  test_brief_critic_guards.py  test_brief_lint_ui_smoke.py  test_brief_measurability_numeric.py  test_calibration.py  test_capture_diagnose.py  test_capture_env_guard.py  test_capture_reset_clear.py  test_capture_shell_wrapper_guard.py  test_capture_worktree_canonical.py  test_catch_quality.py  test_changelog.py  test_ci_comment.py  test_ci_shaped_criteria.py  test_classification_gate.py  test_closures_map.py  test_convergence.py  test_convergence_noop_success.py  test_criteria_evidence.py  test_criterion.py  (+77 more)
(+9 files in other folders)
